[package]
name = "repatch"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/stevenengler/repatch"
description = "A regex find-and-replace tool with a `git add --patch`-like interface."
keywords = ["search", "find", "replace", "regex", "patch"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anstyle = "1.0.14"
anyhow = "1.0.103"
bstr = { version = "1.13.0", features = ["unicode"] }
clap = { version = "4.6.2", features = ["derive", "wrap_help"] }
diffy = { version = "0.5.0", features = ["std", "color"] }
grep-matcher = "0.1.9"
grep-regex = "0.1.14"
grep-searcher = "0.1.17"
ignore = "0.4.29"
libc = "0.2.186"
tempfile = "3.27.0"
